--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first webpage!</title>
+    <title>My Practice Page!</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>My First Webpage</h1>
+    <h1>For Practice Only</h1>
     <h2>Written with a little guidance from <em>Moringa School</em></h2
 
     <p>Hello, world!</p>
